After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 769872 - Patch to fix error when exporting webp animation when layer size smaller than image size.
Patch to fix error when exporting webp animation when layer size smaller than...
Status: RESOLVED FIXED
Product: GIMP
Classification: Other
Component: Plugins
git master
Other All
: Normal normal
: 2.10
Assigned To: GIMP Bugs
GIMP Bugs
Depends on:
Blocks:
 
 
Reported: 2016-08-14 01:02 UTC by Ben
Modified: 2016-08-16 21:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to fix error when exporting webp animation when layer size smaller than image size. (1.99 KB, patch)
2016-08-14 01:02 UTC, Ben
none Details | Review
Patch to fix error when exporting webp animation when layer size smaller than image size. (1.19 KB, patch)
2016-08-14 01:04 UTC, Ben
none Details | Review

Description Ben 2016-08-14 01:02:09 UTC
Created attachment 333256 [details] [review]
Patch to fix error when exporting webp animation when layer size smaller than image size.

When exporting an animation with the webp plugin if the layer size is smaller than the image size the webp encoder will fail on some or all frames with an invalid configuration error. Resizing the layer prior to export fixes the issue. This patch addresses that issue.
Comment 1 Ben 2016-08-14 01:04:35 UTC
Created attachment 333257 [details] [review]
Patch to fix error when exporting webp animation when layer size smaller than image size.
Comment 2 Michael Natterer 2016-08-14 12:08:13 UTC
Just to be sure, this change happens on the export duplicate? If so,
please push.
Comment 3 Ben 2016-08-14 12:17:20 UTC
Yes on export it will fail as descried above, the failure happens in the webp encoder because it can't handle whats being passed to it. Reading is fine as it adjusts the offset as needed.
Comment 4 Ben 2016-08-14 12:19:27 UTC
I can't push the server won't let me, something about too many authentication failures, nothing has changed on my end so assuming its a server error or something.
Comment 5 Michael Natterer 2016-08-14 12:58:01 UTC
I told #sysadmin, let's see what they can figure.
Comment 6 Michael Natterer 2016-08-16 19:03:01 UTC
Andrea Veri (av) in #sysadmin said that's a temporary error that gets
cleared hourly. Can you try again, and check your key, or try ssh -v
into the server?
Comment 7 Ben 2016-08-16 19:13:06 UTC
I'll double check my key in a bit but still getting the error. Here's the output:

Cloning into 'gimp-ssh-test'...
Received disconnect from 209.132.xxx.xxx port 22:2: Too many authentication failures for username_xxxx
Connection to git.gnome.org closed by remote host.
fatal: Could not read from remote repository.

Please make sure you have the correct access rights
and the repository exists.
Comment 8 Ben 2016-08-16 20:21:40 UTC
After some Googling over that last couple of day, and some trial and errors i figured out i now need to specify the the key file to use with git.gnome.org it doesn't find it automatically anymore. Since this started recently i'm guessing something broke again with some nebulous Ubuntu updates.

If it happens to somebody else (at least on Linux) specifying the IdentityFile in ~/.ssh/config for the server and user name should resolve it.

Here's an example the format :

host github.com
 HostName github.com
 IdentityFile ~/.ssh/id_rsa_github
 User git
Comment 9 Ben 2016-08-16 20:44:58 UTC
commit 	7663ff289f8ad9fed60c1d5dc0829a9f55fbf7da
Author: Benoit Touchette <draekko.software+gimp@gmail.com>
Date:   2016-08-16 20:34:09 (GMT)

    plugin: fix for errors during export of webp animation with file-webp
    plugin

    This fixes an error during export of webp animations when the layer is
    size smaller than the image size.

    https://bugzilla.gnome.org/show_bug.cgi?id=769872
Comment 10 Michael Natterer 2016-08-16 21:33:20 UTC
Great, thanks!