plugin: fix for errors during export of webp animation with file-webp plugin

This fixes an error during export of webp animations when the layer is size smaller than the image size.

https://bugzilla.gnome.org/show_bug.cgi?id=769872

Former-commit-id: 7663ff289f8ad9fed60c1d5dc0829a9f55fbf7da